# switch-inspector

./: .gitignore  HANDOFF.md  README.md  main.py  pyproject.toml  requirements.txt
.omo/drafts/: plugin-system.md
.omo/evidence/final-qa/: qa-summary.txt  report-result.json  (+2 more)
.omo/plans/: plugin-system.md
docs/: plugin-spec.md
engine/: alert_engine.py  alert_rule_base.py  deprecated.py  exporter.py  field_catalog.py  hot_reload.py  normalizer.py  parser_base.py  plugin_base.py  plugin_config.py  plugin_exceptions.py  plugin_manager.py  registry.py  report.py  splitter.py  topology.py
parsers/: __init__.py  builtin_single.plugin.toml  builtin_single.py  show_fan.plugin.toml  show_fan.py  show_interfaces_counters.plugin.toml  show_interfaces_counters.py  show_interfaces_description.plugin.toml  show_interfaces_description.py  show_interfaces_transceiver.plugin.toml  show_interfaces_transceiver.py  show_interfaces_transceiver_diagnosis.plugin.toml  show_interfaces_transceiver_diagnosis.py  show_interfaces_usage.plugin.toml  show_interfaces_usage.py  show_lldp_neighbors_detail.plugin.toml  show_lldp_neighbors_detail.py  show_logging.plugin.toml  show_logging.py  show_run.plugin.toml  show_run.py  show_version.plugin.toml  show_version.py
rules/: interface_errors.py  optics_power.py  rules.example.yaml  storm_control.py  system_health.py
templates/: plugin.example.toml  textfsm_mapping.yaml
tests/: conftest.py  test_alert_engine.py  test_alert_rule_base.py  test_hot_reload.py  test_parser_base.py  test_parser_base_enhanced.py  test_plugin_base.py  test_plugin_config.py  test_plugin_manager.py  test_plugin_ui_feedback.py  test_registry_plugin.py  test_report_alert_integration.py  test_rule_interface_errors.py  test_rule_optics_power.py  test_rule_storm_control.py  test_rule_system_health.py  test_topology.py
ui/templates/: index.html  topology.html
